--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -3,4 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: 1000px) {
+    display: none;
+  }
 }
