--- a/src/components/movie-list/movie-list.scss
+++ b/src/components/movie-list/movie-list.scss
@@ -3,4 +3,16 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
   row-gap: 40px;
+
+  @media only screen and (max-width: 1000px) {
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+    row-gap: 20px;
+  }
+
+  @media only screen and (max-width: 660px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
