--- a/src/components/movie-page/movie-page.scss
+++ b/src/components/movie-page/movie-page.scss
@@ -21,29 +21,28 @@
         text-decoration: none;
         border-bottom: 1px solid;
         padding-bottom: 3px;
-      }
-      a:hover {
-        color: #4c51fb;
-        border-color: #4c51fb;
+        &:hover {
+          color: var(--color-text-light-blue);
+          border-color: var(--color-text-light-blue);
+        }
       }
     }
 
     .link {
       color: inherit;
-        text-decoration: none;
-        border-bottom: 1px solid #CCC;
-        padding-bottom: 3px;
-    }
-
-    .link:hover {
-      border-color: var(--color-text-dark-grey);
+      text-decoration: none;
+      border-bottom: 1px solid var(--color-text-light-grey);
+      padding-bottom: 3px;
+      &:hover {
+        border-color: var(--color-text-dark-grey);
+      }
     }
 
     .movie-year {
       display: block;
       font-size: 20px;
       font-weight: 600;
-      color: #4C51FB;
+      color: var(--color-text-light-blue);
       margin-top: 10px;
       margin-bottom: -20px;
       text-align: right;
@@ -125,6 +124,55 @@
         grid-area: subs;
         padding: 15px 10px;
       }  
+    }
+
+    .movie-credits {
+      display: flex;
+      margin: 50px 0 20px 0;
+      padding-bottom: 25px;
+      border-bottom: 2px solid var(--color-text-lightest-grey);
+
+      .credits-section {
+        display: flex;
+        align-items: flex-start;
+
+        .field-title {
+          margin-right: 20px;
+        }
+
+        .field-values {
+          display: flex;
+          flex-wrap: wrap;
+
+          .field-value-credits {
+            color: var(--color-text-dark-grey);
+            font-weight: 600;
+            border-bottom: 1px solid var(--color-text-lightest-grey);
+            padding-bottom: 3px;
+            margin-right: 0.7em;
+            cursor: pointer;
+      
+            &:hover {
+              border-color: var(--color-text-dark-grey);
+            }
+          }
+        }
+      }
+    }
+
+    .movie-description {
+      margin-top: 30px;
+      color: var(--color-text-dark-grey);
+
+      .description {
+        font-size: 14px;
+        
+      }
+
+      .call-to-action {
+        font-size: 25px;
+        margin: 50px 0 25px 0;
+      }
     }
   }
 }
