--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -10,7 +10,9 @@
     transition: 0.3s ease;
 
     &:hover {
-      filter: grayscale(100%);
+      @media only screen and (min-width: 1001px) {
+        filter: grayscale(100%);
+      }
     }
   }
 }
