--- a/src/components/movie-list/movie-list.scss
+++ b/src/components/movie-list/movie-list.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 20px;
   row-gap: 40px;
+  justify-items: center;
 
   @media only screen and (max-width: 1000px) {
     grid-template-columns: 1fr 1fr;
