--- a/src/components/movie-page/movie-page.scss
+++ b/src/components/movie-page/movie-page.scss
@@ -1,20 +1,41 @@
 .movie-page {
   display: flex;
+  align-items: flex-start;
+
+  @media only screen and (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+    }
 
   .movie-cover {
     display: block;
     width: 356px;
     height: 500px;
     object-fit: cover;
+    margin-bottom: 30px;
+
+    @media only screen and (max-width: 900px) {
+    width: 40%;
+    height: auto;
+    object-fit: scale-down;
+    }
+
+    @media only screen and (max-width: 600px) {
+      width: 70%;
+    }
   }
 
   .content-column {
     margin-left: 30px;
     width: 100%;
     font-size: 11px;
+    @media only screen and (max-width: 600px) {
+      margin: 0;
+    }
 
     .movie-breadcrumbs {
       display: block;
+      line-height: 2em;
       
       a {
         color: inherit;
@@ -98,6 +119,8 @@
         "country country country"
         "imdb views subs";
       border: 2px solid var(--color-text-dark-grey);
+      line-height: 2em;
+      text-align: center;
 
       & > * {
         border: 1px solid var(--color-text-dark-grey);
@@ -105,9 +128,21 @@
         justify-content: center;
       }
 
+      @media only screen and (max-width: 700px) {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+          "country country"
+          "imdb views"
+          "subs subs";
+      }
+
       .country {
         grid-area: country;
         padding: 15px;
+        @media only screen and (max-width: 800px) {
+          flex-direction: column;
+          align-items: center;
+        }
       }
 
       .imdb {
@@ -128,21 +163,35 @@
 
     .movie-credits {
       display: flex;
+      justify-content: space-between;
       margin: 50px 0 20px 0;
       padding-bottom: 25px;
       border-bottom: 2px solid var(--color-text-lightest-grey);
+      
+      @media only screen and (max-width: 600px) {
+        flex-direction: column;
+        padding: 0;
+
+        .credits-section {
+          margin-bottom: 20px;
+        }
+      }
 
       .credits-section {
         display: flex;
         align-items: flex-start;
+        @media only screen and (max-width: 900px) {
+          flex-direction: column;
+        }
 
         .field-title {
-          margin-right: 20px;
+          margin-right: 15px;
         }
 
         .field-values {
           display: flex;
           flex-wrap: wrap;
+          margin-right: 30px;
 
           .field-value-credits {
             color: var(--color-text-dark-grey);
@@ -150,6 +199,7 @@
             border-bottom: 1px solid var(--color-text-lightest-grey);
             padding-bottom: 3px;
             margin-right: 0.7em;
+            white-space: nowrap;
             cursor: pointer;
       
             &:hover {
@@ -175,4 +225,6 @@
       }
     }
   }
+
+  
 }
