Polished the menus, implemented All Movies category and added proper links to Movie Card and Movie Page components.

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,11 +5,14 @@
 :root {
   --color-dark-grey: #abb8c3;
   --color-light-grey: rgb(237, 238, 240);
+  --color-light-red: #ff564e;
+  --color-text-white: #fff;
   --color-text-black: #2B2B2F;
   --color-text-dark-grey: #363C4C;
   --color-text-light-grey: #999999;
   --color-text-lightest-grey: #CCC;
   --color-text-light-blue: #4c51fb;
+  --standard-box-shadow: 1px 1px 5px grey;
   --main-section-width--desktop: 964px;
   --width-mobile-breakpoint: 1000px; /* This is just for my reference, as CSS variables can't be used in @media queries */
 }
