--- a/src/components/main-menu-sub-item/main-menu-sub-item.scss
+++ b/src/components/main-menu-sub-item/main-menu-sub-item.scss
@@ -2,8 +2,7 @@
   margin: 10px 15px;
 
   h3 {
-    display: flex;
-    align-items: center;
+    display: inline;
     padding-bottom: 3px;    
     margin: 0;
     letter-spacing: 0.1rem;
@@ -20,8 +19,8 @@
     }
 
     &:hover {
-      border-color: var(--color-text-light-blue);
-      color: var(--color-text-light-blue);
+      border-color: var(--color-light-red);
+      color: var(--color-light-red);
     }
   }
 
