Implemented filter field logic for adding and removing values. Can't actually filter the movie list yet.

--- a/src/components/sort-and-filter/sort-and-filter.scss
+++ b/src/components/sort-and-filter/sort-and-filter.scss
@@ -8,4 +8,11 @@
     font-weight: 800;
     letter-spacing: 3px;
   }
+
+  .filter-fields-container {
+    margin-top: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
 }
