--- a/src/components/filter-field/filter-field.scss
+++ b/src/components/filter-field/filter-field.scss
@@ -6,6 +6,8 @@
     min-height: 20px;
     border: 1px solid black;
     background-color: white;
+    display: flex;
+    flex-flow: wrap;
   }
 
   .menu {
