Implemented sorting functinality and polished filterbox CSS.

--- a/src/components/category-page/category-page.scss
+++ b/src/components/category-page/category-page.scss
@@ -1,6 +1,7 @@
 .category-page {
   color: var(--color-text-dark-grey);
   width: 100%;
+  min-height: 60vh;
 
   .category-title {
     font-size: 60px;
