--- a/src/components/filter-field-value/filter-field-value.scss
+++ b/src/components/filter-field-value/filter-field-value.scss
@@ -1,8 +1,19 @@
 .filter-field-value {
-  background-color: white;
-  border: 1px solid black;
+  background-color: var(--color-light-grey);
+  border-radius: 4px;
+  overflow: hidden;
+  padding-right: 4px;
 
   .remove-button {
     display: inline-block;
+    padding: 0;
+    margin-right: 2px;
+    border: none;
+    padding: 2px 4px;
+    font-size: 11px;
+    &:hover {
+      color: var(--color-light-grey);
+      background-color: var(--color-text-dark-grey);
+    }
   }
 }
