--- a/src/components/filter-field/filter-field.scss
+++ b/src/components/filter-field/filter-field.scss
@@ -1,23 +1,39 @@
 .filter-field {
-  width: 135px;
+  width: 100%;
+  position: relative;
+
+  .filter-field-name {
+    font-size: 11px;
+    text-transform: uppercase;
+    color: var(--color-text-dark-grey);
+    font-weight: 550;
+    letter-spacing: 1px;
+    padding-bottom: 5px;
+  }
 
   .filter-field-content {
     width: 100%;
-    min-height: 20px;
-    border: 1px solid black;
+    min-height: 30px;
+    padding: 5px 10px;
+    border: 1px solid rgb(218, 221, 226);
     background-color: white;
+    font-size: 12px;
     display: flex;
     flex-flow: wrap;
+    column-gap: 5px;
+    row-gap: 5px;
   }
 
   .menu {
     display: flex;
     flex-direction: column;
     position: absolute;
+    left: 0;
     z-index: 2;
-    border: 1px solid black;
+    border: 1px solid var(--color-light-grey);
+    font-size: 12px;
     background-color: white;
-    width: 135px;
+    width: 100%;
     max-height: 250px;
     overflow-y: scroll;
     overflow-x: hidden;
