--- a/src/components/sort-and-filter/sort-and-filter.scss
+++ b/src/components/sort-and-filter/sort-and-filter.scss
@@ -1,18 +1,75 @@
-.filter-box {
+.sort-and-filter {
   margin-bottom: 40px;
 
-  .filter-header {
-    text-transform: uppercase;
-    color: #838a95;
-    font-size: 10px;
-    font-weight: 800;
-    letter-spacing: 3px;
+  .sort-box {
+    margin-bottom: 40px;
+    .sort-header {
+      text-transform: uppercase;
+      color: var(--color-text-light-grey);
+      font-size: 10px;
+      font-weight: 800;
+      letter-spacing: 3px;
+    }
+
+    .sort-fields-container {
+      margin-top: 15px;
+      display: flex;
+
+      .sort-field {
+        font-size: 11px;
+        text-transform: uppercase;
+        color: var(--color-text-dark-grey);
+        font-weight: 550;
+        letter-spacing: 2px;
+        padding-bottom: 3px;
+        cursor: pointer;
+        
+        &.selected {
+          border-bottom: 4px solid var(--color-text-light-blue);
+        }
+
+        &:not(:first-of-type) {
+          margin-left: 30px;
+        }
+      }
+    }
   }
 
-  .filter-fields-container {
-    margin-top: 15px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+  .filter-box {
+    .filter-header {
+      text-transform: uppercase;
+      color: var(--color-text-light-grey);
+      font-size: 10px;
+      font-weight: 800;
+      letter-spacing: 3px;
+    }
+
+    .filter-fields-container {
+      margin-top: 10px;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      column-gap: 20px;
+
+      .reset-button {
+        cursor: pointer;
+        align-self: flex-start;
+        position: relative;
+        top: 27px;
+        background-color: none;
+        border: none;
+        padding: 0 0 2px 0;
+        border-bottom: 4px solid var(--color-light-red);
+        font-size: 11px;
+        text-transform: uppercase;
+        white-space: nowrap;
+        color: var(--color-text-dark-grey);
+        font-weight: 550;
+        letter-spacing: 1px;
+        &:hover {
+          border-color: var(--color-text-dark-grey);
+        }
+      }
+    }
   }
 }
