--- a/src/components/category-page/category-page.scss
+++ b/src/components/category-page/category-page.scss
@@ -16,4 +16,14 @@
       letter-spacing: -1px;
     }
   }
+
+  @media only screen and (max-width: 600px) {
+    .category-title {
+      font-size: 40px;
+
+      .category-subtitle {
+        font-size: 16px;
+      }
+    }
+  }
 }
