--- a/src/components/main-menu/main-menu.scss
+++ b/src/components/main-menu/main-menu.scss
@@ -4,7 +4,25 @@
   justify-content: space-between;
   align-items: center;
 
-  @media only screen and (max-width: 1000px) {
-    display: none;
+  .all-movies-button {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--color-light-red);
+    color: var(--color-text-white);
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.1rem;
+    font-size: 11px;
+    font-weight: 600;
+    text-transform: uppercase;
+
+    a {
+      padding: 15px 35px;
+    }
+
+    &:hover {
+      background-color: var(--color-text-dark-grey);
+    }
   }
 }
