Fully implemented decorators for all pages.

--- a/src/components/decorative-element/decorative-element.scss
+++ b/src/components/decorative-element/decorative-element.scss
@@ -7,6 +7,24 @@
   height: 740px;
 }
 
+.decorative-image-white-poligon {
+  position: absolute;
+  z-index: -1;
+  top: -190px;
+  left: -100px;
+  width: 774px;
+  height: 756.5px;
+}
+
+.decorative-image-white-poligon-big {
+  position: absolute;
+  z-index: -1;
+  top: -180px;
+  left: 30px;
+  width: 964px;
+  height: 987.5px;
+}
+
 .decorative-image-girl {
   position: absolute;
   z-index: -1;
@@ -15,3 +33,42 @@
   width: 337px;
   height: 798px;
 }
+
+.homepage-header {
+  font-size: 50px;
+  margin-top: 100px;
+  margin-right: 20px;
+  font-weight: 900;
+  letter-spacing: -2px;
+}
+
+.homepage-subheader {
+  display: block;
+  font-size: 38px;
+  font-weight: bold;
+  margin-left: 280px;
+  color: white;
+
+  @media only screen and (max-width: 810px) {
+    margin-left: 80px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .homepage-header {
+    font-size: 48px;
+    line-height: 50px;
+    margin-top: 50px;
+    margin-left: 8%;
+    margin-bottom: 10px;
+  }
+  
+  .homepage-subheader {
+    font-size: 25px;
+    margin-left: 8%;
+    margin-bottom: 0;
+    color: var(--color-text-dark-grey);
+  }
+}
+
+
