--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -18,7 +18,7 @@
 }
 
 .main-section {
-  width: var(--main-section-width--desktop);
+  max-width: var(--main-section-width--desktop);
   margin: 0 auto;
 }
 
