--- a/src/components/sort-and-filter/sort-and-filter.scss
+++ b/src/components/sort-and-filter/sort-and-filter.scss
@@ -55,6 +55,7 @@
 
   .filter-box {
     .filter-header {
+      margin-top: 10px;
       text-transform: uppercase;
       color: var(--color-text-light-grey);
       font-size: 10px;
