--- a/src/components/category-page/category-page.scss
+++ b/src/components/category-page/category-page.scss
@@ -20,6 +20,7 @@
   @media only screen and (max-width: 600px) {
     .category-title {
       font-size: 40px;
+      line-height: 42px;
 
       .category-subtitle {
         font-size: 16px;
