--- a/src/components/decorative-element/decorative-element.scss
+++ b/src/components/decorative-element/decorative-element.scss
@@ -38,6 +38,7 @@
   font-size: 50px;
   margin-top: 100px;
   margin-right: 20px;
+  margin-bottom: 0;
   font-weight: 900;
   letter-spacing: -2px;
 }
@@ -46,7 +47,7 @@
   display: block;
   font-size: 38px;
   font-weight: bold;
-  margin-left: 280px;
+  margin-left: 250px;
   color: white;
 
   @media only screen and (max-width: 810px) {
