--- a/src/components/movie-page/movie-page.scss
+++ b/src/components/movie-page/movie-page.scss
@@ -67,6 +67,9 @@
       margin-top: 10px;
       margin-bottom: -20px;
       text-align: right;
+      @media only screen and (max-width: 800px) {
+        margin-bottom: 0;
+      }
     }
 
     .movie-title {
@@ -75,6 +78,11 @@
       font-weight: 700;
       letter-spacing: -3px;
       margin: 0 0 25px 0;
+
+      @media only screen and (max-width: 800px) {
+        font-size: 30px;
+        line-height: 32px;
+      }
     }
 
     .original-title {
