--- a/src/components/movie-page/movie-page.scss
+++ b/src/components/movie-page/movie-page.scss
@@ -204,15 +204,17 @@
           .field-value-credits {
             color: var(--color-text-dark-grey);
             font-weight: 600;
-            border-bottom: 1px solid var(--color-text-lightest-grey);
             padding-bottom: 3px;
             margin-right: 0.7em;
             white-space: nowrap;
+
+            /* This code will make names of actors/directors look like links. I'll need it if I ever make them interactive
+            border-bottom: 1px solid var(--color-text-lightest-grey);
             cursor: pointer;
-      
             &:hover {
               border-color: var(--color-text-dark-grey);
             }
+            */
           }
         }
       }
